# price-notifications

./: Cargo.toml  README.md
data/: coingecko_supported_coins.json
src/: config.rs  main.rs  notify.rs  price.rs  rewrite.rs
