[package]
name = "prices"
version = "0.1.0"
edition = "2021"
author = "Kyle Dewhurst"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilio = "*"
tokio = { version = "1.6.0", features = ["full"] }
coingecko = "*"
serde_json = "*"
serde = "*"
async-trait = "*"
dialoguer = "*"
anyhow = "*"
colored = "*"
daemonize = "0.5.0"
log = "0.4"
flexi_logger = "*"
users = "0.11.0"
