[package]
name = "price-notifications"
version = "0.1.0"
edition = "2021"
author = "kyle dewy"
description = "A simple CLI tool to send cryptocurrency price notifications via SMS"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilio = "*"
tokio = { version = "1.6.0", features = ["full"] }
coingecko = "*"
serde_json = "*"
serde = "*"
async-trait = "*"
dialoguer = "*"
anyhow = "*"
colored = "*"
log = "0.4"
flexi_logger = "*"
