[package]
name = "price-notifications"
version = "0.1.0"
edition = "2021"
author = "kyle dewy"
description = "A simple CLI tool to send cryptocurrency price notifications via SMS"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilio = "1.0.2"
tokio = { version = "1.6.0", features = ["full"] }
coingecko = "1.0.1"
serde_json = "1.0.103"
serde = "1.0.175"
async-trait = "0.1.72"
dialoguer = "0.10.4"
anyhow = "1.0.72"
colored = "2.0.4"
log = "0.4"
flexi_logger = "0.25.5"
